# ferrilab

./: .editorconfig  .git-blame-ignore-revs  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.txt  README.md  afterword.html  bitvec.html  book.toml  clippy.toml  codecov.yml  dedication.html  funty.html  index.html  introduction.html  print.html  radium.html  rust-toolchain.toml  rust.just  rustfmt.toml  searchindex.js  searchindex.json  tarpaulin.toml  toc.html  toc.js
.github/workflows/: coverage.yml  gh-pages.yml
assets/: README.md  favicon.svg.b64.txt  logo.svg.b64.txt
bitvec/: CHANGELOG.md  Cargo.toml  Justfile  LICENSE.txt  README.md  clippy.toml  data-structures.html  memory-model.html  memory-representation.html  miscellaneous.html  performance.html  pointer-encoding.html  practical-use.html  rust-toolchain.toml  type-parameters.html
bitvec/assets/: bitvec.svg.b64.txt
bitvec/benches/: memcpy.rs
bitvec/data-structures/: bitarray.html  bitslice.html  bitvec.html
bitvec/doc/domain/: Domain.md
bitvec/doc/field/: BitField_Lsb0_load_be.md  BitField_Lsb0_load_le.md  BitField_Lsb0_store_be.md  BitField_Lsb0_store_le.md  BitField_Msb0_load_be.md  BitField_Msb0_load_le.md  BitField_Msb0_store_be.md  BitField_Msb0_store_le.md
bitvec/doc/macros/: bitarr_value.md  bits.md
bitvec/doc/order/: LocalBits.md  Lsb0.md  Msb0.md
bitvec/doc/serdes/: utils.md
bitvec/doc/vec/: BitVec.md
bitvec/practical-use/: bitfields.html  collections.html
bitvec/src/: access.rs  domain.rs  field.rs  index.rs  lib.rs  macros.rs  mem.rs  order.rs  serdes.rs  slice.rs  store.rs
bitvec/src/array/: iter.rs  tests.rs  traits.rs
bitvec/src/boxed/: iter.rs  tests.rs  traits.rs
bitvec/src/macros/: internal.rs  tests.rs
bitvec/src/ptr/: proxy.rs  range.rs  single.rs  span.rs
bitvec/src/serdes/: array.rs  slice.rs  utils.rs
bitvec/src/slice/: api.rs  iter.rs  ops.rs  tests.rs  traits.rs
bitvec/src/slice/specialization/: lsb0.rs  msb0.rs
bitvec/src/vec/: api.rs  iter.rs  traits.rs
bitvec/src/vec/tests/: api.rs
bitvec/tests/: foreign_order.rs
bitvec/type-parameters/: bitorder.html  bitstore.html
funty/: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.txt  README.md  clippy.toml  permission-changes.html  rust-toolchain.toml  rustfmt-nightly.toml
funty/assets/: funty.svg.b64.txt
funty/doc/: nonnull.md  permission.md  pointers.md  ptr.md
funty/doc/ptr/: fn.addr_eq.md  fn.copy.md  fn.copy_nonoverlapping.md  fn.dangling.md  fn.drop_in_place.md  fn.eq.md  fn.from_reference.md  fn.hash.md  fn.null.md  fn.read.md  fn.read_unaligned.md  fn.read_volatile.md  fn.replace.md  fn.slice_from_raw_parts.md  fn.swap.md  fn.swap_nonoverlapping.md  fn.with_exposed_provenance.md  fn.without_provenance.md  fn.write.md  fn.write_bytes.md  fn.write_unaligned.md  fn.write_volatile.md  struct.NonNullPointer.md  struct.Pointer.fn.wrapping_offset.md  struct.Pointer.md  trait.Permission.md  type.Reference.md
funty/src/: lib.rs  macros.rs  num.rs  ptr.rs
funty/src/num/: nonzero.rs
funty/src/num/nonzero/: error.rs  traits.rs
funty/src/ptr/: details.rs  error.rs  nonnull.rs
funty/tests/: readme.rs
guide/: README.md  SUMMARY.md  afterword.md  bitvec.md  book.toml  funty.md  introduction.md  radium.md
guide/bitvec/: data-structures.md  miscellaneous.md  pointer-encoding.md
guide/bitvec/data-structures/: bitarray.md  bitslice.md  bitvec.md
guide/bitvec/practical-use/: bitfields.md  collections.md
guide/bitvec/type-parameters/: bitorder.md  bitstore.md
guide/funty/: permission-changes.md
guide/src/: SUMMARY.md  bitvec.md  dedication.md  funty.md  introduction.md  pointdexter.md  radium.md
guide/src/bitvec/: memory-model.md  memory-representation.md  performance.md  practical-use.md  type-parameters.md
guide/src/bitvec/data-structures/: bitvec.md
pointdexter/: Cargo.toml  Justfile  LICENSE.txt  README.md
pointdexter/assets/: arborium-header.html  extra.css  pointdexter.svg.b64.txt
pointdexter/doc/: fn.addr_eq.md  fn.copy.md  fn.copy_nonoverlapping.md  fn.dangling.md  fn.drop_in_place.md  fn.eq.md  fn.from_reference.md  fn.hash.md  fn.null.md  fn.read.md  fn.read_unaligned.md  fn.read_volatile.md  fn.replace.md  fn.slice_from_raw_parts.md  fn.swap.md  fn.swap_nonoverlapping.md  fn.with_exposed_provenance.md  fn.without_provenance.md  fn.write.md  fn.write_bytes.md  fn.write_unaligned.md  fn.write_volatile.md  lib.md  struct.NonNullPointer.md  struct.Pointer.md  struct.Shared.md  struct.Unique.md  trait.Permission.md  type.Reference.md
pointdexter/doc/struct.NonNullPointer/: method.as_ptr.md  method.new.md  method.new_unchecked.md
pointdexter/doc/struct.Pointer/: method.add.md  method.addr.md  method.align_offset.md  method.as_array.md  method.as_reference.md  method.byte_add.md  method.byte_offset.md  method.byte_offset_from.md  method.byte_offset_from_unsigned.md  method.byte_sub.md  method.cast.md  method.cast_permission.md  method.expose_provenance.md  method.is_aligned.md  method.is_empty.md  method.is_null.md  method.len.md  method.map_addr.md  method.offset.md  method.offset_from.md  method.offset_from_unsigned.md  method.sub.md  method.with_addr.md  method.wrapping_add.md  method.wrapping_byte_add.md  method.wrapping_byte_offset.md  method.wrapping_byte_sub.md  method.wrapping_offset.md  method.wrapping_sub.md
pointdexter/src/: error.rs  lib.rs  macros.rs  nonnull.rs  permission.rs  pointer.rs
radium/: CHANGELOG.md  Cargo.toml  Justfile  README.md  build.rs  clippy.toml
radium/.github/workflows/: build.yml
radium/assets/: radium.svg.b64.txt
radium/doc/: atom.md  isotope.md  radium.md  radon.md  types.md
radium/examples/: schroedinger.rs
radium/src/: lib.rs  macros.rs  marker.rs  portable.rs  seal.rs  types.rs
