[workspace]
members = [
	"bitvec",
	"funty",
	"pointdexter",
	"radium",
]
resolver = "2"

# Allow developement to use the local workspace. `cargo package` ignores this
# directive and always pulls from the registry.
[patch.crates-io]
bitvec = { path = "bitvec" }
funty = { path = "funty" }
ptxr = { path = "pointdexter" }
radium = { path = "radium" }
