[package]
name = "funty"
version = "3.0.0-rc2"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
categories = [
	"no-std",
	"rust-patterns",
]
description = "Trait generalization over the primitive types"
documentation = "https://docs.rs/funty"
edition = "2021"
include = [
	"Cargo.toml",
	"README.md",
	"LICENSE.txt",
	"src/*.rs",
	"doc/*.md",
]
keywords = [
	"numerics",
	"primitives",
	"traits",
	"pointers",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bitvecto-rs/funty"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
	"std",
]
std = []

[dev-dependencies]
static_assertions = "1"
