[package]
name = "funty"
version = "3.0.0-rc3"
categories = [
	"no-std",
	"rust-patterns",
]
description = "Trait generalization over the primitive types"
documentation = "https://docs.rs/funty"
homepage = "https://ferrilab.github.io/ferrilab"
edition = "2024"
include = [
	"Cargo.toml",
	"README.md",
	"LICENSE.txt",
	"src/*.rs",
	"doc/*.md",
]
keywords = [
	"numerics",
	"primitives",
	"traits",
	"pointers",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ferrilab/ferrilab"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
	"rust_now",
	"std",
]
std = []
rust_186 = []
rust_187 = ["rust_186"]
rust_188 = ["rust_187"]
rust_189 = ["rust_188"]
rust_190 = ["rust_189"]
rust_now = ["rust_190"]

[dev-dependencies]
static_assertions = "1"
