[package]
name = "radium"
version = "1.0.0-rc2"
authors = [
    "Nika Layzell <nika@thelayzells.com>",
    "myrrlyn <self@myrrlyn.dev>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bitvecto-rs/radium"
homepage = "https://github.com/bitvecto-rs/radium"
documentation = "https://docs.rs/radium"
description = "Portable interfaces for maybe-atomic types"
keywords = ["atomic", "cell", "sync", "generic", "trait"]
categories = ["concurrency", "no-std"]

include = [
    "Cargo.toml",
    "src/**/*.rs",
    "README.md",
    "doc/**/*.md",
    "LICENSE.txt",
]

edition = "2018"

[dependencies]

[dev-dependencies]
static_assertions = "1.1"
