[package]
name = "radium"
version = "1.0.0"
authors = [
	"Nika Layzell <nika@thelayzells.com>",
	"myrrlyn <self@myrrlyn.dev>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ferrilab/ferrilab"
homepage = "https://ferrilab.github.io/ferrilab"
documentation = "https://docs.rs/radium"
description = "Portable interfaces for maybe-atomic types"
keywords = [
	"atomic",
	"cell",
	"sync",
	"generic",
	"trait",
]
categories = [
	"concurrency",
	"no-std",
]

include = [
	"Cargo.toml",
	"src/**/*.rs",
	"README.md",
	"doc/**/*.md",
	"LICENSE.txt",
]

edition = "2021"
rust-version = "1.60"

[dependencies]

[dev-dependencies]
static_assertions = "1.1"
