[package]
name = "radium"
version = "1.1.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ferrilab/ferrilab"
homepage = "https://ferrilab.github.io/ferrilab"
documentation = "https://docs.rs/radium"
description = "Portable interfaces for maybe-atomic types"
keywords = [
	"atomic",
	"cell",
	"sync",
	"generic",
	"trait",
]
categories = [
	"concurrency",
	"no-std",
]
include = [
	"Cargo.toml",
	"src/**/*.rs",
	"README.md",
	"doc/**/*.md",
	"LICENSE.txt",
]
edition = "2021"
rust-version = "1.60"

[features]
portable-atomic = [
	"dep:portable-atomic",
]
portable-atomic-fallback = [
	"portable-atomic",
	"portable-atomic/fallback",
]

[dependencies]
cfg-if = "1"

[dependencies.portable-atomic]
version = "1"
optional = true
default-features = false

[dev-dependencies]
static_assertions = "1.1"
